# Gym-Setpoint

./: Cartpole_generalized_naive_controler.ipynb  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  train_LTI_order1_rllib.ipynb  train_LTI_random_order1_rllib.ipynb
diffusion/: DataConstruct_Generative-2D_SPDL.ipynb  data_Generative-2D_SPDL.ipynb  data_Generative2D_SPDL.ipynb  data_Generative_2D_SPDL.ipynb  result_Generative-2D_SPDL.ipynb  result_Generative2D_SPDL.ipynb  test-train_Generative-2D_SPDL.ipynb
doc/result/: result_cartpole_checkpoint_seaborn.ipynb  result_cartpole_test_seaborn.ipynb
doc/train/: train_DQN_Cartpole-classique-noLimite_RLlib.ipynb
example/test/: test-train_LTI_random-orderN_V3_SB3.ipynb  test_cartpole_checkpoint.ipynb
gym_setpoint/: __init__.py
gym_setpoint/envs/: gym_wrap.py  lti_env.py  multi_lti.py
model/: README.md
result/: result_cartpole_seaborn.ipynb  result_cartpole_test_seaborn.ipynb
result/cartpole_performance/: stat_cartpole_mode0.csv  stat_cartpole_mode2.csv
spl-env/: sprl_lti.py  sprl_wrapper.py
test/: test_GymSetpointWrapper.ipynb  test_LTI_random-orderN_V2_rllib.ipynb
