[tool.poetry]
name = "gym-setpoint"
version = "0.1.0"
description = ""
authors = ["fabienfrfr <fabien.furfaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = ">0.29"
control = "0.9.4"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
